src/objects/Company_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Current_Amount__c</fullName>
        <formula>Total_Income__c -( Total_Other_Expense__c +  Total_Developers_Payment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Developers_Payment__c</fullName>
        <label>Total Developers Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <label>Total Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Expense__c</fullName>
        <label>Total Other Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Company Budget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>